# 2048

./: .gitignore  README.md  action.py  adversary.py  agent.py  app.py  block.py  bombTile.py  collaboration-statement-mack.md  data.py  game.py  gameState.py  main.py  monteCarloTree.py  notes.txt  plot.py  pyproject.toml  report.md  statespace.md  test.py  tile.py  tileClass.py
data/: 2026-05-06T212618.json  2026-05-06T212654.json  2026-05-06T212728.json  2026-05-06T212808.json  2026-05-06T212947.json  2026-05-06T213142.json  2026-05-06T213313.json  2026-05-06T213503.json  2026-05-06T213730.json  2026-05-06T213953.json  2026-05-06T214212.json  2026-05-06T214427.json  2026-05-06T214708.json  2026-05-06T215026.json  2026-05-06T215329.json  2026-05-06T215619.json  2026-05-06T215936.json  2026-05-06T220304.json  2026-05-06T220622.json  2026-05-06T221013.json  2026-05-06T221150.json  2026-05-06T221306.json  2026-05-06T221441.json  2026-05-06T221610.json  2026-05-06T221940.json  2026-05-06T222308.json  2026-05-06T222702.json  2026-05-06T223100.json  2026-05-06T223626.json  2026-05-06T224036.json  2026-05-06T224550.json  2026-05-06T225025.json  2026-05-06T225653.json  2026-05-06T230327.json  2026-05-06T230928.json  2026-05-06T231609.json  2026-05-06T232518.json  2026-05-06T233327.json  2026-05-06T234113.json  2026-05-06T234127.json  (+31 more)
pseudocode/: 2026-04-09.py
scripts/: data.py  plot.py
