[project]
name = "2048"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pygame-ce>=2.5.7",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pandas-stubs>=3.0.0.260204",
    "ruff>=0.15.9",
]
